--- a/TapeHubDemo/MainPage.xaml
+++ b/TapeHubDemo/MainPage.xaml
@@ -1,36 +1,84 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TapeHubDemo.MainPage">
+             x:Class="TapeHubDemo.MainPage"
+             Shell.FlyoutBehavior="Disabled"
+             BackgroundColor="#F5F5DC">
 
-    <ScrollView>
+    <!-- Disabling the back button in the navigation bar when navigating from the MainPage to the LoginPage -->
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsVisible="False" />
+    </Shell.BackButtonBehavior>
+
+    <AbsoluteLayout>
+        <!-- Centered Stack wrapper for Logo and Slogan to be centered -->
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+            x:Name="ContentStack"
+            WidthRequest="350"
+            Spacing="10"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            AbsoluteLayout.LayoutFlags="PositionProportional"
+            AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize">
 
+            <!-- Puzzle pieces layout: (i) top-left piece, (ii) top-right, (iii) bottom-left and (iv) bottom-right -->
+            <AbsoluteLayout
+                x:Name="LogoPuzzle"
+                WidthRequest="200"
+                HeightRequest="200"
+                VerticalOptions="Center"
+                HorizontalOptions="Center">
+
+                <Image
+                    x:Name="TopLeftPiece"
+                    Source="escape_logo_top_left.png"
+                    HeightRequest="100"
+                    WidthRequest="100"
+                    Aspect="AspectFit"
+                    Opacity="0"
+                    AbsoluteLayout.LayoutBounds="0, 0, AutoSize, AutoSize"
+                    AbsoluteLayout.LayoutFlags="None" />
+
+                <Image
+                    x:Name="TopRightPiece"
+                    Source="escape_logo_top_right.png"
+                    HeightRequest="100"
+                    WidthRequest="100"
+                    Aspect="AspectFit"
+                    Opacity="0"
+                    AbsoluteLayout.LayoutBounds="100, 0, AutoSize, AutoSize"
+                    AbsoluteLayout.LayoutFlags="None" />
+
+                <Image
+                    x:Name="BottomLeftPiece"
+                    Source="escape_logo_bottom_left.png"
+                    HeightRequest="100"
+                    WidthRequest="100"
+                    Aspect="AspectFit"
+                    Opacity="0"
+                    AbsoluteLayout.LayoutBounds="0, 100, AutoSize, AutoSize"
+                    AbsoluteLayout.LayoutFlags="None" />
+
+                <Image
+                    x:Name="BottomRightPiece"
+                    Source="escape_logo_bottom_right.png"
+                    HeightRequest="100"
+                    WidthRequest="100"
+                    Aspect="AspectFit"
+                    Opacity="0"
+                    AbsoluteLayout.LayoutBounds="100, 100, AutoSize, AutoSize"
+                    AbsoluteLayout.LayoutFlags="None" />
+            </AbsoluteLayout>
+
+            <!-- Slogan Text -->
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                x:Name="SloganLabel"
+                FontFamily="GreatVibesRegular"
+                FontSize="36"
+                FontAttributes="Bold"
+                TextColor="#8B5E3C"
+                HorizontalTextAlignment="Center"
+                Opacity="0" />
         </VerticalStackLayout>
-    </ScrollView>
-
+    </AbsoluteLayout>
 </ContentPage>
