--- a/TapeHubDemo/View/ShopBranchesPage.xaml
+++ b/TapeHubDemo/View/ShopBranchesPage.xaml
@@ -3,25 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TapeHubDemo.View.ShopBranchesPage"
              xmlns:vm="clr-namespace:TapeHubDemo.ViewModel"
-             xmlns:model="clr-namespace:TapeHubDemo.Model"
-             x:DataType="vm:ShopBranchesPageViewModel"
+             Shell.FlyoutBehavior="Disabled"
              Title="Shop Branches">
+
+    <!-- Setting the data context (binding context) of this page to an instance of ShopBranchesViewModel -->
     <ContentPage.BindingContext>
-        <vm:ShopBranchesPageViewModel />
+        <vm:ShopBranchesViewModel />
     </ContentPage.BindingContext>
 
-    <CollectionView x:Name="ShopBranchesCollectionView"
-                    ItemsSource="{Binding Branches}"
-                    SelectionMode="Single"
-                    SelectionChanged="OnBranchSelected">
+    <!-- Displaying a collection of shop branches in a card-like style using a Frame for each item -->
+    <CollectionView ItemsSource="{Binding Branches}" SelectionMode="Single" SelectionChanged="OnBranchSelected">
         <CollectionView.ItemTemplate>
-            <DataTemplate x:DataType="model:ShopBranch">
-                <Frame Padding="10" CornerRadius="10" BorderColor="LightGray">
-                    <StackLayout>
-                        <Image Source="{Binding ImagePath}" HeightRequest="100" />
-                        <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="18" />
-                        <Label Text="{Binding OpeningHours}" FontSize="14" />
-                        <Label Text="{Binding ClosingHours}" FontSize="14" />
+            <DataTemplate>
+                <Frame Padding="10" BorderColor="LightGray" CornerRadius="10" Margin="10">
+                    <StackLayout Orientation="Vertical" Spacing="10">
+                        <Image Source="{Binding ImagePath}" HeightRequest="300" Aspect="Fill" />
+                        <Label Text="{Binding Name}" FontAttributes="Bold" FontFamily="CinzelRegular" FontSize="18" />
+                        <Label Text="{Binding OpeningHours}" FontFamily="CinzelBold" FontSize="14" />
+                        <Label Text="{Binding ClosingHours}" FontFamily="CinzelBold" FontSize="14" />
                     </StackLayout>
                 </Frame>
             </DataTemplate>
