vm for ProductsPage, flyoutmenu, animation on ShopBranchesPage

--- a/TapeHubDemo/AppShell.xaml
+++ b/TapeHubDemo/AppShell.xaml
@@ -9,6 +9,7 @@
     Shell.TitleColor="#F5F5DC">
 
     <ShellContent Route="MainPage" ContentTemplate="{DataTemplate main:MainPage}" />
+    <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate view:LoginPage}" />
     <ShellContent Route="ShopBranchesPage" ContentTemplate="{DataTemplate view:ShopBranchesPage}" />
     <ShellContent Route="ProductsPage" ContentTemplate="{DataTemplate view:ProductsPage}" />
 </Shell>
