--- a/TapeHubDemo/View/ShopBranchesPage.xaml
+++ b/TapeHubDemo/View/ShopBranchesPage.xaml
@@ -3,26 +3,33 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TapeHubDemo.View.ShopBranchesPage"
              xmlns:vm="clr-namespace:TapeHubDemo.ViewModel"
+             xmlns:controls="clr-namespace:TapeHubDemo.Control"
              Shell.FlyoutBehavior="Disabled"
              Title="Shop Branches">
 
-    <!-- Setting the data context (binding context) of this page to an instance of ShopBranchesViewModel -->
+    <!-- Setting the data (binding) context of this page to an instance of «ShopBranchesViewModel» -->
     <ContentPage.BindingContext>
         <vm:ShopBranchesViewModel />
     </ContentPage.BindingContext>
 
     <!-- Displaying a collection of shop branches in a card-like style using a Frame for each item -->
-    <CollectionView ItemsSource="{Binding Branches}" SelectionMode="Single" SelectionChanged="OnBranchSelected">
+    <CollectionView ItemsSource="{Binding Branches}" SelectionMode="None">
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <Frame Padding="10" BorderColor="LightGray" CornerRadius="10" Margin="10">
+                <controls:ShopBranchFrame Padding="10" BorderColor="LightGray" CornerRadius="10" Margin="10">
+                    <!-- Adding a «TapGestureRecognizer» to the entire Frame to allow user redirecting logic
+                    after clicking on the «Image» inside «CollectionView» (to trigger item selection) -->
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:ShopBranchesViewModel}}, Path=BranchSelectedCommand}" CommandParameter="{Binding .}" />
+                    </Frame.GestureRecognizers>
+
                     <StackLayout Orientation="Vertical" Spacing="10">
                         <Image Source="{Binding ImagePath}" HeightRequest="300" Aspect="Fill" />
                         <Label Text="{Binding Name}" FontAttributes="Bold" FontFamily="CinzelRegular" FontSize="18" />
                         <Label Text="{Binding OpeningHours}" FontFamily="CinzelBold" FontSize="14" />
                         <Label Text="{Binding ClosingHours}" FontFamily="CinzelBold" FontSize="14" />
                     </StackLayout>
-                </Frame>
+                </controls:ShopBranchFrame>
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
