--- a/TapeHubDemo/View/LoginPage.xaml
+++ b/TapeHubDemo/View/LoginPage.xaml
@@ -74,5 +74,16 @@
                 <TapGestureRecognizer Tapped="OnForgotPasswordTapped" />
             </Label.GestureRecognizers>
         </Label>
+
+        <!-- Sign Up Link -->
+        <Label Text="Don't have an account? Sign up here!"
+               TextColor="#8B4513"
+               FontSize="14"
+               HorizontalOptions="Center"
+               Margin="0,10,0,0">
+            <Label.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding NavigateToRegisterCommand}" />
+            </Label.GestureRecognizers>
+        </Label>
     </StackLayout>
 </ContentPage>
